over dfs problem